--- a/index.html
+++ b/index.html
@@ -30,63 +30,64 @@
                 <section id="gallery">
                     <h2>Gallery</h2>
                         <p>Here are some highlights of my work. The locations and year are in the caption.</p>
-                    <figure >
-                        <img src="images/Chile.png" alt="coastal picture of chile">
-                        <figcaption id="chile">
-                            Chile, 2001
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Guatemala.png" alt="waterfront image in Guatemala">
-                        <figcaption id="guatemala">
-                            Guatemala, 1997
-                        </figcaption>
-                    </figure>  
-                    <figure>
-                        <img src="images/Hawaii.png" alt="arial view of Hawaii mountains and coast">
-                        <figcaption id="hawaii">
-                            Hawaii, 2010
-                        </figcaption>
-                    </figure>  
-                    <figure>
-                        <img src="images/Iran.png" alt="valley view as the sun rises">
-                        <figcaption id="iran">
-                            Iran, 1999
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Ireland.png" alt="Irish grassy hillside">
-                        <figcaption id="ireland">Ireland, 2012</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Italy.png" alt="Mountain and lake scene in Italy">
-                        <figcaption id="italy">Italy, 2015</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Moab-Desert.png" alt="Moab arch with sun setting">
-                        <figcaption id="moab">Moab Desert, 2020</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Rocky-Mountains.png" alt="Snowy rocky mountain peaks in Colorado">
-                        <figcaption id="colorado">Rocky Mountains, 2009</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Switzerland.png" alt="Snowy Switzerland mountain side">
-                        <figcaption id="switzerland">Switzerland, 2014</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/UK.png" alt="Green meadow view in the UK">
-                        <figcaption id="uk">UK, 2005</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/USA.png" alt="Meadow of flowers in the USA">
-                        <figcaption id="usa">USA, 2021</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/Wyoming.png" alt="Wyoming mountain scape with lake">
-                        <figcaption id="wyoming">Wyoming, 2021</figcaption>
-                    </figure>
-
+                    <div class="imagegallery">
+                        <figure >
+                            <img src="images/Chile.png" alt="coastal picture of chile">
+                            <figcaption id="chile">
+                                Chile, 2001
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Guatemala.png" alt="waterfront image in Guatemala">
+                            <figcaption id="guatemala">
+                                Guatemala, 1997
+                            </figcaption>
+                        </figure>  
+                        <figure>
+                            <img src="images/Hawaii.png" alt="arial view of Hawaii mountains and coast">
+                            <figcaption id="hawaii">
+                                Hawaii, 2010
+                            </figcaption>
+                        </figure>  
+                        <figure>
+                            <img src="images/Iran.png" alt="valley view as the sun rises">
+                            <figcaption id="iran">
+                                Iran, 1999
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Ireland.png" alt="Irish grassy hillside">
+                            <figcaption id="ireland">Ireland, 2012</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Italy.png" alt="Mountain and lake scene in Italy">
+                            <figcaption id="italy">Italy, 2015</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Moab-Desert.png" alt="Moab arch with sun setting">
+                            <figcaption id="moab">Moab Desert, 2020</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Rocky-Mountains.png" alt="Snowy rocky mountain peaks in Colorado">
+                            <figcaption id="colorado">Rocky Mountains, 2009</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Switzerland.png" alt="Snowy Switzerland mountain side">
+                            <figcaption id="switzerland">Switzerland, 2014</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/UK.png" alt="Green meadow view in the UK">
+                            <figcaption id="uk">UK, 2005</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/USA.png" alt="Meadow of flowers in the USA">
+                            <figcaption id="usa">USA, 2021</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/Wyoming.png" alt="Wyoming mountain scape with lake">
+                            <figcaption id="wyoming">Wyoming, 2021</figcaption>
+                        </figure>
+                    </div>
                 </section>
                 <section id="contact">
                     <form>
